// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment View should render correctly 1`] = `
<View
  cardList={Object {}}
  checkbalanceValueInfo={Object {}}
  className=""
  creditCardList={Object {}}
  deleteModalMountedState={false}
  giftCardList={Object {}}
  labels={
    Object {
      "common": Object {},
      "giftCard": "Payment",
      "paymentGC": Object {},
    }
  }
  onDeleteCard={Object {}}
  onGetBalanceCard={[Function]}
  setDefaultPaymentMethod={[Function]}
  setDeleteModalMountState={false}
  setDeleteModalMountedState={false}
  setUpdateModalMountState={false}
  setUpdateModalMountedState={false}
  updateModalMountedState={false}
  venmoCardList={Object {}}
>
  <ScrollViewMock
    showsVerticalScrollIndicator={false}
  >
    <Styled(Text)>
      <Styled(BodyCopy)
        fontSize="fs16"
        fontWeight="extrabold"
      />
    </Styled(Text)>
    <Styled(View) />
    <Styled(OffersSection)
      labels={
        Object {
          "common": Object {},
          "giftCard": "Payment",
          "paymentGC": Object {},
        }
      }
    />
    <Styled(Cards)
      cardImage={
        Object {
          "testUri": "../../../src/assets/images/credit-card.png",
        }
      }
      cardList={Object {}}
      checkbalanceValueInfo={null}
      labels={
        Object {
          "common": Object {},
          "giftCard": "Payment",
          "paymentGC": Object {},
        }
      }
      onGetBalanceCard={null}
      openUpdateModal={[Function]}
      setDefaultPaymentMethod={[Function]}
      setSelectedCard={[Function]}
      toggleModal={[Function]}
    />
    <Styled(Cards)
      cardImage={
        Object {
          "testUri": "../../../src/assets/images/gift-card.png",
        }
      }
      cardList={Object {}}
      checkbalanceValueInfo={Object {}}
      labels={
        Object {
          "common": Object {},
          "giftCard": "Payment",
          "paymentGC": Object {},
        }
      }
      onGetBalanceCard={[Function]}
      openUpdateModal={null}
      setDefaultPaymentMethod={null}
      setSelectedCard={[Function]}
      toggleModal={[Function]}
    />
  </ScrollViewMock>
</View>
`;

exports[`Payment View should render correctly with cardList 1`] = `
<View
  cardList={
    Immutable.List [
      Object {
        "accountNo": "************1111",
        "addressDetails": Object {
          "addressLine1": "111 3rd Ave",
          "addressLine2": "",
          "city": "New York",
          "country": "US",
          "firstName": "new",
          "lastName": "address",
          "phone1": "9878909876",
          "state": "NY",
          "zipCode": "10003",
        },
        "billingAddressId": 160685,
        "ccBrand": "Visa",
        "ccType": "COMPASSVISA",
        "creditCardId": 73501,
        "defaultInd": false,
        "expMonth": "5 ",
        "expYear": "2024",
        "nameOnAccount": ".",
        "properties": null,
      },
    ]
  }
  checkbalanceValueInfo={Object {}}
  className=""
  creditCardList={
    Immutable.List [
      Object {
        "accountNo": "************1111",
        "addressDetails": Object {
          "addressLine1": "111 3rd Ave",
          "addressLine2": "",
          "city": "New York",
          "country": "US",
          "firstName": "new",
          "lastName": "address",
          "phone1": "9878909876",
          "state": "NY",
          "zipCode": "10003",
        },
        "billingAddressId": 160685,
        "ccBrand": "Visa",
        "ccType": "COMPASSVISA",
        "creditCardId": 73501,
        "defaultInd": false,
        "expMonth": "5 ",
        "expYear": "2024",
        "nameOnAccount": ".",
        "properties": null,
      },
    ]
  }
  deleteModalMountedState={false}
  giftCardList={
    Immutable.List [
      Object {
        "accountNo": "************1111",
        "addressDetails": Object {
          "addressLine1": "111 3rd Ave",
          "addressLine2": "",
          "city": "New York",
          "country": "US",
          "firstName": "new",
          "lastName": "address",
          "phone1": "9878909876",
          "state": "NY",
          "zipCode": "10003",
        },
        "billingAddressId": 160685,
        "ccBrand": "Visa",
        "ccType": "COMPASSVISA",
        "creditCardId": 73501,
        "defaultInd": false,
        "expMonth": "5 ",
        "expYear": "2024",
        "nameOnAccount": ".",
        "properties": null,
      },
    ]
  }
  labels={
    Object {
      "common": Object {},
      "paymentGC": Object {},
      "paymentHeading": "Payment",
    }
  }
  onDeleteCard={Object {}}
  onGetBalanceCard={[Function]}
  setDefaultPaymentMethod={[Function]}
  setDeleteModalMountState={false}
  setDeleteModalMountedState={false}
  setUpdateModalMountState={false}
  setUpdateModalMountedState={false}
  showNotification="success"
  updateModalMountedState={false}
  venmoCardList={Object {}}
>
  <ScrollViewMock
    showsVerticalScrollIndicator={false}
  >
    <Styled(Text)>
      <Styled(BodyCopy)
        fontSize="fs16"
        fontWeight="extrabold"
      />
    </Styled(Text)>
    <Styled(View) />
    <Styled(OffersSection)
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
          "paymentHeading": "Payment",
        }
      }
    />
    <Styled(Cards)
      cardImage={
        Object {
          "testUri": "../../../src/assets/images/credit-card.png",
        }
      }
      cardList={
        Immutable.List [
          Object {
            "accountNo": "************1111",
            "addressDetails": Object {
              "addressLine1": "111 3rd Ave",
              "addressLine2": "",
              "city": "New York",
              "country": "US",
              "firstName": "new",
              "lastName": "address",
              "phone1": "9878909876",
              "state": "NY",
              "zipCode": "10003",
            },
            "billingAddressId": 160685,
            "ccBrand": "Visa",
            "ccType": "COMPASSVISA",
            "creditCardId": 73501,
            "defaultInd": false,
            "expMonth": "5 ",
            "expYear": "2024",
            "nameOnAccount": ".",
            "properties": null,
          },
        ]
      }
      checkbalanceValueInfo={null}
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
          "paymentHeading": "Payment",
        }
      }
      onGetBalanceCard={null}
      openUpdateModal={[Function]}
      setDefaultPaymentMethod={[Function]}
      setSelectedCard={[Function]}
      toggleModal={[Function]}
    />
    <Styled(Cards)
      cardImage={
        Object {
          "testUri": "../../../src/assets/images/gift-card.png",
        }
      }
      cardList={
        Immutable.List [
          Object {
            "accountNo": "************1111",
            "addressDetails": Object {
              "addressLine1": "111 3rd Ave",
              "addressLine2": "",
              "city": "New York",
              "country": "US",
              "firstName": "new",
              "lastName": "address",
              "phone1": "9878909876",
              "state": "NY",
              "zipCode": "10003",
            },
            "billingAddressId": 160685,
            "ccBrand": "Visa",
            "ccType": "COMPASSVISA",
            "creditCardId": 73501,
            "defaultInd": false,
            "expMonth": "5 ",
            "expYear": "2024",
            "nameOnAccount": ".",
            "properties": null,
          },
        ]
      }
      checkbalanceValueInfo={Object {}}
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
          "paymentHeading": "Payment",
        }
      }
      onGetBalanceCard={[Function]}
      openUpdateModal={null}
      setDefaultPaymentMethod={null}
      setSelectedCard={[Function]}
      toggleModal={[Function]}
    />
  </ScrollViewMock>
</View>
`;
